New css selector was added.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,6 +18,10 @@ h1 {
   margin-bottom: 10px;
 }
 
+.margin-bottom-2x {
+  margin-bottom: 20px;
+}
+
 .margin-bottom-3x {
   margin-bottom: 30px;
 }
