--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -2,6 +2,11 @@ h1 {
   margin-top: 20px;
 }
 
+.photo {
+  border-radius: 50% 50% 50% 50%;
+  width: 75%;
+}
+
 .content-center {
   text-align: center;
 }
