--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -98,6 +98,10 @@
   font-size: 18px;
 }
 
+ul {
+  list-style-type: disc;
+}
+
 @media (min-width: 550px) {
   .title-center {
     text-align: left;
