--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -96,6 +96,7 @@
 .left-column .title {
   font-weight: bold;
   font-size: 18px;
+  margin-bottom: 10px;
 }
 
 ul {
@@ -114,6 +115,9 @@ ul {
   }
   .title-large {
     font-size: 28px;
+  }
+  .left-column .title {
+    margin-bottom: 0px;
   }
 }
 
